--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
-    "uninstall": "0.0.0"
+    "uninstall": "0.0.0",
+    "unique-names-generator": "^4.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
