--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon -r dotenv/config  src/index.js",
+    "dev": "nodemon -r dotenv/config  src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
