--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "otp-generator": "^2.0.0",
     "uninstall": "0.0.0",
+    "validator": "^13.1.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
