--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://api.github.com/v1"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server/index.js",
     "dev": "nodemon -r dotenv/config  src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
