--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
-    "otp-generator": "^2.0.0",
-    "uninstall": "0.0.0",
     "validator": "^13.1.1",
     "winston": "^3.3.3"
   },
