--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "node src/server/index.js",
     "dev": "nodemon -r dotenv/config  src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "document-it":"apidoc -e node_modules -i src/ -o doc/ "
   },
   "author": "",
   "license": "ISC",
